--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         /* Icons ________________________________________________________________________________________________________________________________________________ */
         .arrow-right-icon {
-            background-image: url('/img/Arrow_Down_MD.svg');
+            background-image: url('./img/Arrow_Down_MD.svg');
             background-size: 24px 24px;
             width: 24px;
             height: 24px;
@@ -248,7 +248,7 @@
         }
 
         .star-icon {
-            background-image: url('/img/icons8-star-48\ 5.svg');
+            background-image: url('./img/icons8-star-48\ 5.svg');
             background-size: 24px 24px;
             width: 24px;
             height: 24px;
@@ -257,7 +257,7 @@
         }
 
         .chat-icon {
-            background-image: url('/img/Chat_Circle_Check.svg');
+            background-image: url('./img/Chat_Circle_Check.svg');
             background-size: 24px 24px;
             width: 24px;
             height: 24px;
@@ -266,7 +266,7 @@
         }
 
         .credit-card-icon {
-            background-image: url('/img/Credit_Card_01.svg');
+            background-image: url('./img/Credit_Card_01.svg');
             background-size: 24px 24px;
             width: 24px;
             height: 24px;
@@ -338,7 +338,7 @@
                     <div class="side-banner-wrapper">
                         <div class="side-banner-card">
                             <div class="side-banner-top">
-                                <img class="side-banner-img" src="/img/Group 51.png" alt="icon">
+                                <img class="side-banner-img" src="./img/Group 51.png" alt="icon">
                                 <div class="side-banner-title">
                                     <h2>Letterbox4you</h2>
                                     <div class="side-banner-stars">
@@ -452,7 +452,7 @@
                     <div class="image-description">
                         <div class="image-description-container">
                             <div class="image-card">
-                                <img src="/img/s-l140.webp" alt="">
+                                <img src="./img/s-l140.webp" alt="">
                             </div>
                             <div class="image-description-text">
                                 <p>Top Quality Guaranteed</p>
@@ -460,7 +460,7 @@
                         </div>
                         <div class="image-description-img">
                             <div class="image-card">
-                                <img src="/img/s-l140.webp" alt="">
+                                <img src="./img/s-l140.webp" alt="">
                             </div>
                             <div class="image-description-text">
                                 <p>Fast & Reliable UK Dispatch</p>
@@ -468,7 +468,7 @@
                         </div>
                         <div class="image-description-img">
                             <div class="image-card">
-                                <img src="/img/s-l140.webp" alt="">
+                                <img src="./img/s-l140.webp" alt="">
                             </div>
                             <div class="image-description-text">
                                 <p>Secure and Trusted Shopping</p>
