--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         .burger {
             display: none;
         }
+        .hero {
+            width: 100%;
+            height: auto;
+        }
+
 
         @media (min-width: 933px) {
 
@@ -60,6 +65,7 @@
                 /* background-color: #f9f9f9; */
                 color: #ffffff;
                 height: 50vh;
+                width: 100%;
                 background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('./img/slider2.webp') no-repeat center center;
                 display: flex;
                 flex-direction: column;
@@ -372,6 +378,7 @@
 
 
             }
+
         }
 
 
@@ -383,7 +390,7 @@
         /* ______________________________________________________________________________________________________________ */
 
         /* Mobile styles */
-        @media (max-width: 760px) {
+        @media (max-width: 933px) {
 
             .hero-wrapper {
                 flex-direction: column;
